[package]
name = "sawdisk"
version = "0.1.0"
edition = "2021"

[dependencies]
cliclack = { git = "https://github.com/ikeycode/cliclack.git", version = "0.3.5" }
color-eyre = { version = "0.6.3", features = ["issue-url"] }
console = "0.15.10"
disks = { git = "https://github.com/serpent-os/disks-rs", rev = "6bd9ffe4cf14222c00137d376f9d34e187a67975" }
partitioning = { git = "https://github.com/serpent-os/disks-rs", rev = "6bd9ffe4cf14222c00137d376f9d34e187a67975" }
log = "0.4.25"
pretty_env_logger = "0.5.0"
privileged-ipc = { git = "https://github.com/serpent-os/tools-api.git", version = "0.1.0" }
serde_json = "1.0.137"
serde = { version = "1.0.217", features = ["derive"] }
